--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,17 +5,6 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* background: radial-gradient(50.03% 52.3% at 50.05% 50.05%, rgba(5, 146, 249, 0.5) 4.17%, rgba(255, 255, 255, 0) 100%) 
+background: radial-gradient(50.03% 52.3% at 50.05% 50.05%, rgba(192, 12, 255, 0.7) 4.17%, rgba(255, 255, 255, 0) 100%)  */
 }
